<resources>
    <string name="app_name">Proyecto Usuarios</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">Crear una cuenta</string>
    <string name="dash">Datos de usuario</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contrasena">Contrasena</string>
    <string name="usuario_defecto">Usuario administrador por defecto: %s (Contraseña %s)</string>
    <string name="regular_user">Regular</string>
    <string name="admin_user">Administrador</string>

    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="tipo_usuario">Tipo Usuario</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="accion_guardar_cambios">Guardar cambios</string>
    <string name="accion_iniciar_sesion">Iniciar sesión</string>
    <string name="accion_crear_cuenta">Registrar usuario</string>

    <string name="resultado_contrasena_incorrecta">La contraseña introducida es incorrecta</string>
    <string name="resultado_no_usuario">No se ha podido encontrar ningún usuario con esos datos</string>
    <string name="resultado_borrar_cuenta">Tu cuenta ha sido borrada</string>
    <string name="resultado_guardar_cuenta">La cuenta se ha actualizado correctamente</string>
    <string name="resultado_usuario_existe">Ya existe un usuario con ese nombre de usuario</string>
    <string name="resultado_alta_correcta">Se te ha dado de alta correctamente</string>

    <string name="accion_admin_hacer_admin">Hacer admin</string>
    <string name="accion_admin_quitar_admin">Quitar admin</string>
    <string name="accion_admin_modificar">Modificar datos</string>
    <string name="administracion">Administración</string>
    <string name="resultado_descenso">Usuario descendido a usuario regular</string>
    <string name="resultado_ascenso">Usuario ascendido a usuario administrador</string>
</resources>
