<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/iniciar_sesion"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/campo_usuario_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/campo_contrasena_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo_usuario_login"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="213dp"
        android:layout_height="22dp"
        android:text="@string/nombre_usuario"
        app:layout_constraintBottom_toTopOf="@+id/campo_usuario_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="212dp"
        android:layout_height="25dp"
        android:text="@string/contrasena"
        app:layout_constraintBottom_toTopOf="@+id/campo_contrasena_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton_iniciar_sesion"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:text="@string/accion_iniciar_sesion"
        app:layout_constraintBottom_toTopOf="@+id/boton_actividad_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo_contrasena_login"
        app:layout_constraintVertical_bias="1.0"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/boton_actividad_registro"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="92dp"
        android:text="@string/accion_crear_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#ffffff" />

</androidx.constraintlayout.widget.ConstraintLayout>